@@ -508,13 +508,13 @@
 			<GenericName>python-scipy</GenericName>
 			<Title>Python Scipy</Title>
 			<PossibleNames>python-scipy</PossibleNames>
-			<FileCheck>/usr/lib/python2.7/dist-packages/scipy</FileCheck>
+			<FileCheck>/usr/lib/python*/dist-packages/scipy</FileCheck>
 		</Package>
 		<Package>
 			<GenericName>python-sklearn</GenericName>
 			<Title>Python Sklearn</Title>
 			<PossibleNames>python-sklearn</PossibleNames>
-			<FileCheck>/usr/lib/python2.7/dist-packages/scikit_learn-0.17.egg-info</FileCheck>
+			<FileCheck>/usr/lib/python*/dist-packages/scikit_learn-0.17.egg-info OR /usr/lib/python*/dist-packages/sklearn/</FileCheck>
 		</Package>
 		<Package>
 			<GenericName>V8</GenericName>
