@@ -358,12 +358,10 @@
 		<Package>
 			<GenericName>python-scipy</GenericName>
 			<PackageName>python3-scipy</PackageName>
-			<FileCheck>/usr/lib/python3/dist-packages/scipy</FileCheck>
 		</Package>
 		<Package>
 			<GenericName>python-sklearn</GenericName>
 			<PackageName>python3-sklearn</PackageName>
-			<FileCheck>/usr/lib/python3/dist-packages/sklearn/</FileCheck>
 		</Package>
 		<Package>
 			<GenericName>V8</GenericName>
